--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.7.2
 certifi==2023.11.17
 charset-normalizer==3.3.2
+dj-database-url==1.3.0
 Django==4.2.2
 django-cors-headers==3.14.0
 django-filter==22.1
@@ -21,5 +22,6 @@ pytz==2023.3
 PyYAML==6.0.1
 requests==2.31.0
 sqlparse==0.4.4
+typing_extensions==4.9.0
 uritemplate==4.1.1
 urllib3==2.1.0
